--- a/nextjs-crypto-api/pages/coin/Coin.module.css
+++ b/nextjs-crypto-api/pages/coin/Coin.module.css
@@ -10,7 +10,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    border: 1px solid #2fffe5;
+    border: 1px solid #6e6e6e;
     border-radius: 10px;
     padding: 4rem;
     width: 400px;
@@ -18,6 +18,8 @@
   
   .coin_image {
     margin-bottom: 1rem;
+    height: 100px;
+    width: 100px;
   }
   
   .coin_name {
@@ -26,6 +28,7 @@
   
   .coin_ticker {
     margin-bottom: 1rem;
+    text-transform: uppercase;
   }
   
   .coin_current {
